# laa-access-civil-legal-aid

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trufflehog3.yml  .trufflehogignore  Dockerfile  Dockerfile copy  Makefile  README copy.md  README.md  backend-compose.yml  build.sh  compose-backend-path.override.yml  compose-standalone.yml  compose.override.yml  compose.yml  esbuild.config.js  govuk-frontend-flask.py  gulpfile.js  messages.pot  node.Dockerfile  package-lock.json  package.json  pyproject.toml  run_local.sh  run_local_standalone.sh  setup.cfg  sonar-project.properties  tests.py
.github/workflows/: build-and-push.yml  build-docs.yml  build.yml  cleanup-release.yml  deploy-dev.yml  deploy-dnstest.yaml  deploy-dnstest.yml  deploy-docs.yml  deploy.yml  dev.yml  dnstest-branch.yaml  feature-branch.yml  gajira.yml  github.yml  main-branch.yml  production.yml  sca.yml  scan-image.yml  security.yml  snyk-image-scan.yml  staging.yml  static-analysis.yml  test.yml  trivy-cron.yml  trivy-image-scan.yml  (+2 more)
app/: __init__.py  api.py  extensions.py  mixins.py  session.py
docs/: README.md  makefile
laa_access_civil_legal_aid/: Dockerfile  compose.yml  config.py  package-lock.json  package.json  requirements.in  requirements_dev.in  requirements_dev.txt
playwright/: accessibility.py  test_accessibility.py  test_example.py
requirements/: requirements-base.in  requirements-development.in  requirements-development.txt  requirements-production.txt
tests/: backend-compose.yml  conftest.py  test_accessibility.py
unit_tests/: test_example.py
(+494 files in other folders)
